[project]
name = "payment-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "payments-db",
    "aio-pika>=9.4.0",
    "asyncpg>=0.31.0",
    "greenlet>=3.5.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
]

[tool.uv.sources]
payments-db = { path = "../packages/payments_db", editable = true }
